--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -133,3 +133,61 @@ jobs:
         displayName: "Build --config $(BuildType)"
         inputs:
           cmakeArgs: --build . --config $(BuildType) -- /verbosity:minimal
+          
+  - job:
+    displayName: Ubuntu 16.04
+    pool:
+      vmImage: 'ubuntu-16.04'
+    timeoutInMinutes: 120
+    steps:
+      - script: |
+          sudo apt install -y libhdf5-dev libminizip-dev valgrind
+        displayName: 'APT install'
+
+      - script: |
+          curl https://mirroir.wptheme.fr/apache/avro/avro-1.10.1/cpp/avro-cpp-1.10.1.tar.gz -o $(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz
+      - task: ExtractFiles@1
+        inputs:
+          archiveFilePatterns: '$(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz'
+          cleanDestinationFolder: false
+      - powershell: |
+          sed -i 's/install \(TARGETS avrocpp avrocpp_s/install (TARGETS avrocpp_s/' $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt
+          sed -i 's/install \(TARGETS avrogencpp RUNTIME DESTINATION bin\)//' $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt
+        displayName: 'Do not install avro non static' 
+      - task: CMake@1
+        displayName: 'CMake configure AVRO'
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs:
+            $(Build.SourcesDirectory)/avro-cpp-1.10.1
+            $(Generator)
+            -Wno-dev -Wno-deprecated
+            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DCMAKE_INSTALL_PREFIX=$(Agent.TempDirectory)/avro-cpp-1.10.1-install
+      - task: CMake@1
+        displayName: "CMake build AVRO --config $(BuildType)"
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs: --build . --config $(BuildType) --target avrocpp_s -- /verbosity:minimal
+      - task: CMake@1
+        displayName: "CMake Install AVRO --config $(BuildType)"
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs: --install .    
+
+      - task: CMake@1
+        displayName: 'Configure FETPAPI build'
+        inputs:
+          cmakeArgs:
+            -Wno-dev -Wno-deprecated
+            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
+            -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/avrocpp_s.a
+            -DCMAKE_BUILD_TYPE=Release
+            -S $(Build.SourcesDirectory)
+            -B $(Build.BinariesDirectory)
+
+      - task: CMake@1
+        displayName: "Build FETPAPI"
+        inputs:
+          cmakeArgs: --build $(Build.BinariesDirectory)
