--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -167,7 +167,7 @@ jobs:
         displayName: "CMake build AVRO"
         inputs:
           workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
-          cmakeArgs: --build . --target avrocpp_s --verbosity:minimal
+          cmakeArgs: --build . --target avrocpp_s
       - task: CMake@1
         displayName: "CMake Install AVRO"
         inputs:
