--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,6 +65,136 @@ jobs:
           cmakeArgs: --build . --config $(BuildType) -- /verbosity:minimal
 
   - job:
+    displayName: Windows VS2017 with fesapi
+    pool:
+      vmImage: 'vs2017-win2016'
+    strategy:
+      matrix:
+        64-bit Release:
+          BuildType: Release
+          Generator: '-G"Visual Studio 15 2017 Win64" -T host=x64'
+          JFlag: '-j 2'
+    timeoutInMinutes: 150
+    steps:
+      # AVRO
+      - powershell: |
+          Invoke-WebRequest https://mirroir.wptheme.fr/apache/avro/avro-1.10.1/cpp/avro-cpp-1.10.1.tar.gz -OutFile $(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz
+      - task: ExtractFiles@1
+        inputs:
+          archiveFilePatterns: '$(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz'
+          cleanDestinationFolder: false
+      - powershell: |
+          ((Get-Content -path $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt -Raw) -replace 'install \(TARGETS avrocpp avrocpp_s','install (TARGETS avrocpp_s') | Set-Content -Path $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt
+          ((Get-Content -path $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt -Raw) -replace 'install \(TARGETS avrogencpp RUNTIME DESTINATION bin\)','') | Set-Content -Path $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt
+        displayName: 'Do not install avro non static' 
+      - task: CMake@1
+        displayName: 'CMake configure AVRO'
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs:
+            $(Build.SourcesDirectory)/avro-cpp-1.10.1
+            $(Generator)
+            -Wno-dev -Wno-deprecated
+            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DCMAKE_INSTALL_PREFIX=$(Agent.TempDirectory)/avro-cpp-1.10.1-install
+      - task: CMake@1
+        displayName: "CMake build AVRO --config $(BuildType)"
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs: --build . --config $(BuildType) --target avrocpp_s -- /verbosity:minimal
+      - task: CMake@1
+        displayName: "CMake Install AVRO --config $(BuildType)"
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs: --install .
+          
+      # HDF5
+      - powershell: |
+          Invoke-WebRequest https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.10/hdf5-1.10.6/bin/hdf5-1.10.6-Std-win10_64-vs15.zip -OutFile C:\hdf5-1.10.6-Std-win10_64-vs15.zip
+          Expand-Archive C:\hdf5-1.10.6-Std-win10_64-vs15.zip -DestinationPath C:\
+          msiexec.exe /i "C:\hdf\HDF5-1.10.6-win64.msi" /qn INSTALL_ROOT=C:\hdf5-1.10.6-win64-vs2017
+        displayName: 'Install HDF5 1.10.6'    
+      
+      # Minizip
+      - powershell: |
+          git clone https://github.com/F2I-Consulting/Minizip.git C:/Minizip
+        displayName: 'Cloning Minizip'
+      - task: CMake@1
+        displayName: 'CMake configure Minizip'
+        inputs:
+          workingDirectory: C:/Minizip-build
+          cmakeArgs:
+            ../Minizip
+            $(Generator)
+            -Wno-dev -Wno-deprecated
+            -DZLIB_INCLUDE_DIR=C:/hdf5-1.10.6-win64-vs2017/include
+            -DZLIB_LIBRARY_RELEASE=C:/hdf5-1.10.6-win64-vs2017/lib/hdf5.lib
+            -DCMAKE_INSTALL_PREFIX=C:/Minizip-install
+      - task: CMake@1
+        displayName: "CMake build Minizip --config $(BuildType)"
+        inputs:
+          workingDirectory: C:/Minizip-build
+          cmakeArgs: --build . --config $(BuildType) -- /verbosity:minimal
+      - task: CMake@1
+        displayName: "CMake Install Minizip --config $(BuildType)"
+        inputs:
+          workingDirectory: C:/Minizip-build
+          cmakeArgs: --build . --config $(BuildType) --target INSTALL -- /verbosity:minimal
+      
+      # fesapi 
+      - powershell: |
+          git clone --branch https://github.com/F2I-Consulting/fetpapi.git C:/fesapi
+        displayName: 'Cloning fesapi'
+      - task: CMake@1
+        displayName: 'CMake configure fesapi'
+        inputs:
+          workingDirectory: C:/fesapi-build
+          cmakeArgs:
+            ../fesapi
+            $(Generator)
+            -Wno-dev -Wno-deprecated
+            -DHDF5_BUILT_AS_DYNAMIC_LIB=TRUE
+            -DHDF5_C_INCLUDE_DIR=C:/hdf5-1.10.6-win64-vs2017/include
+            -DHDF5_C_LIBRARY_RELEASE=C:/hdf5-1.10.6-win64-vs2017/lib/hdf5.lib
+            -DMINIZIP_INCLUDE_DIR=C:/Minizip-install/include
+            -DMINIZIP_LIBRARY_RELEASE=C:/Minizip-install/lib/minizip.lib
+            -DZLIB_INCLUDE_DIR=C:/hdf5-1.10.6-win64-vs2017/include
+            -DZLIB_LIBRARY_RELEASE=C:/hdf5-1.10.6-win64-vs2017/lib/zlib.lib
+            -DSZIP_LIBRARY_RELEASE=C:/hdf5-1.10.6-win64-vs2017/lib/szip.lib
+            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DCMAKE_INSTALL_PREFIX=C:/fesapi-install
+      - task: CMake@1
+        displayName: "CMake build fesapi --config $(BuildType)"
+        inputs:
+          workingDirectory: C:/fesapi-build
+          cmakeArgs: --build . --config $(BuildType) -- /verbosity:minimal
+      - task: CMake@1
+        displayName: "CMake Install fesapi --config $(BuildType)"
+        inputs:
+          workingDirectory: C:/fesapi-build
+          cmakeArgs: --build . --config $(BuildType) --target INSTALL -- /verbosity:minimal
+      
+      - task: CMake@1
+        displayName: 'CMake .. $(Generator)'
+        inputs:
+          cmakeArgs:
+            ..
+            $(Generator)
+            -Wno-dev -Wno-deprecated
+            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
+            -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/avrocpp_s.lib
+            -DWITH_FESAPI=TRUE
+            -DHDF5_C_INCLUDE_DIR=C:/hdf5-1.10.6-win64-vs2017/include
+            -DFESAPI_INCLUDE_DIR=C:/fesapi-install/include
+            -DFESAPI_LIBRARY_RELEASE=C:/fesapi-install/lib/FesapiCpp.2.1.0.0.lib
+
+      - task: CMake@1
+        displayName: "Build --config $(BuildType)"
+        inputs:
+          cmakeArgs: --build . --config $(BuildType) -- /verbosity:minimal
+          
+  - job:
     displayName: Windows VS2019
     pool:
       vmImage: 'windows-2019'
@@ -133,6 +263,148 @@ jobs:
         displayName: "Build --config $(BuildType)"
         inputs:
           cmakeArgs: --build . --config $(BuildType) -- /verbosity:minimal
+  
+  - job:
+    displayName: Windows VS2019 with fesapi
+    pool:
+      vmImage: 'windows-2019'
+    timeoutInMinutes: 150
+    strategy:
+      matrix:
+        # 64-bit Debug:
+        #   BuildType: Debug
+        #   Generator: '-G"Visual Studio 16 2019" -A x64" -T host=x64'
+        #   JFlag: -j 4
+
+        64-bit Release:
+          BuildType: Release
+          Generator: '-G"Visual Studio 16 2019" -A x64 -T host=x64'
+          JFlag: '-j 2'
+    steps:       
+      # AVRO
+      - powershell: |
+          Invoke-WebRequest https://mirroir.wptheme.fr/apache/avro/avro-1.10.1/cpp/avro-cpp-1.10.1.tar.gz -OutFile $(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz
+      - task: ExtractFiles@1
+        inputs:
+          archiveFilePatterns: '$(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz'
+          cleanDestinationFolder: false
+      - powershell: |
+          ((Get-Content -path $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt -Raw) -replace 'install \(TARGETS avrocpp avrocpp_s','install (TARGETS avrocpp_s') | Set-Content -Path $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt
+          ((Get-Content -path $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt -Raw) -replace 'install \(TARGETS avrogencpp RUNTIME DESTINATION bin\)','') | Set-Content -Path $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt
+        displayName: 'Do not install avro non static' 
+      - task: CMake@1
+        displayName: 'CMake configure AVRO'
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs:
+            $(Build.SourcesDirectory)/avro-cpp-1.10.1
+            $(Generator)
+            -Wno-dev -Wno-deprecated
+            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DCMAKE_INSTALL_PREFIX=$(Agent.TempDirectory)/avro-cpp-1.10.1-install
+      - task: CMake@1
+        displayName: "CMake build AVRO --config $(BuildType)"
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs: --build . --config $(BuildType) --target avrocpp_s -- /verbosity:minimal
+      - task: CMake@1
+        displayName: "CMake Install AVRO --config $(BuildType)"
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs: --install .
+
+      # Patch about https://github.com/boostorg/beast/issues/1980
+      - powershell: |
+          ((Get-Content -path $(BOOST_ROOT_1_72_0)/include/boost/beast/core/impl/file_stdio.ipp -Raw) -replace 'std::numeric_limits<long>::max','(std::numeric_limits<long>::max)') | Set-Content -Path $(BOOST_ROOT_1_72_0)/include/boost/beast/core/impl/file_stdio.ipp
+        displayName: 'Patching Beast 1.72 for MSVC'
+      
+      # HDF5      
+      - powershell: |
+          Invoke-WebRequest https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.12/hdf5-1.12.0/bin/hdf5-1.12.0-Std-win10_64-vs16.zip -OutFile C:\hdf5-1.12.0-Std-win10_64-vs16.zip
+          Expand-Archive C:\hdf5-1.12.0-Std-win10_64-vs16.zip -DestinationPath C:\
+          msiexec.exe /i "C:\hdf\HDF5-1.12.0-win64.msi" /qn INSTALL_ROOT=C:\hdf5-1.12.0-win64-vs2019
+        displayName: 'Install HDF5 1.12.0'
+
+      # Minizip
+      - powershell: |
+          git clone https://github.com/F2I-Consulting/Minizip.git C:/Minizip
+        displayName: 'Cloning Minizip'
+      - task: CMake@1
+        displayName: 'CMake configure Minizip'
+        inputs:
+          workingDirectory: C:/Minizip-build
+          cmakeArgs:
+            ../Minizip
+            $(Generator)
+            -Wno-dev -Wno-deprecated
+            -DZLIB_INCLUDE_DIR=C:/hdf5-1.12.0-win64-vs2019/include
+            -DZLIB_LIBRARY_RELEASE=C:/hdf5-1.12.0-win64-vs2019/lib/zlib.lib
+            -DCMAKE_INSTALL_PREFIX=C:/Minizip-install
+      - task: CMake@1
+        displayName: "CMake build Minizip --config $(BuildType)"
+        inputs:
+          workingDirectory: C:/Minizip-build
+          cmakeArgs: --build . --config $(BuildType) -- /verbosity:minimal
+      - task: CMake@1
+        displayName: "CMake Install Minizip --config $(BuildType)"
+        inputs:
+          workingDirectory: C:/Minizip-build
+          cmakeArgs: --build . --config $(BuildType) --target INSTALL -- /verbosity:minimal    
+          
+      # fesapi
+      - powershell: |
+          git clone https://github.com/F2I-Consulting/fesapi.git C:/fesapi
+        displayName: 'Cloning fesapi'
+      - task: CMake@1
+        displayName: 'CMake configure fesapi'
+        inputs:
+          workingDirectory: C:/fesapi-build
+          cmakeArgs:
+            ../fesapi
+            $(Generator)
+            -Wno-dev -Wno-deprecated
+            -DHDF5_BUILT_AS_DYNAMIC_LIB=TRUE
+            -DHDF5_C_INCLUDE_DIR=C:/hdf5-1.12.0-win64-vs2019/include
+            -DHDF5_C_LIBRARY_RELEASE=C:/hdf5-1.12.0-win64-vs2019/lib/hdf5.lib
+            -DMINIZIP_INCLUDE_DIR=C:/Minizip-install/include
+            -DMINIZIP_LIBRARY_RELEASE=C:/Minizip-install/lib/minizip.lib
+            -DZLIB_INCLUDE_DIR=C:/hdf5-1.12.0-win64-vs2019/include
+            -DZLIB_LIBRARY_RELEASE=C:/hdf5-1.12.0-win64-vs2019/lib/zlib.lib
+            -DSZIP_LIBRARY_RELEASE=C:/hdf5-1.12.0-win64-vs2019/lib/szip.lib
+            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
+            -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/avrocpp_s.lib
+            -DCMAKE_INSTALL_PREFIX=C:/fesapi-install
+      - task: CMake@1
+        displayName: "CMake build fesapi --config $(BuildType)"
+        inputs:
+          workingDirectory: C:/fesapi-build
+          cmakeArgs: --build . --config $(BuildType) -- /verbosity:minimal
+      - task: CMake@1
+        displayName: "CMake Install fesapi --config $(BuildType)"
+        inputs:
+          workingDirectory: C:/fesapi-build
+          cmakeArgs: --build . --config $(BuildType) --target INSTALL -- /verbosity:minimal    
+          
+      - task: CMake@1
+        displayName: 'CMake .. $(Generator)'
+        inputs:
+          cmakeArgs:
+            ..
+            $(Generator)
+            -Wno-dev -Wno-deprecated
+            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
+            -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/avrocpp_s.lib
+            -DWITH_FESAPI=TRUE
+            -DHDF5_C_INCLUDE_DIR=C:/hdf5-1.10.6-win64-vs2017/include
+            -DFESAPI_INCLUDE_DIR=C:/fesapi-install/include
+            -DFESAPI_LIBRARY_RELEASE=C:/fesapi-install/lib/FesapiCpp.2.1.0.0.lib
+
+      - task: CMake@1
+        displayName: "Build --config $(BuildType)"
+        inputs:
+          cmakeArgs: --build . --config $(BuildType) -- /verbosity:minimal
           
   - job:
     displayName: Ubuntu 16.04
@@ -142,7 +414,7 @@ jobs:
     steps:
       # BOOST
       - script: |
-          sudo apt install libboost-all-dev
+          sudo apt install -y libboost-all-dev
         displayName: 'APT install'
         
       # AVRO
@@ -184,6 +456,93 @@ jobs:
             -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
             -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
             -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/libavrocpp_s.a
+            -DCMAKE_BUILD_TYPE=Release
+            -S $(Build.SourcesDirectory)
+            -B $(Build.BinariesDirectory)
+
+      - task: CMake@1
+        displayName: "Build FETPAPI"
+        inputs:
+          cmakeArgs: --build $(Build.BinariesDirectory)
+          
+  - job:
+    displayName: Ubuntu 16.04 with fesapi
+    pool:
+      vmImage: 'ubuntu-16.04'
+    timeoutInMinutes: 120
+    steps:
+      # BOOST
+      - script: |
+          sudo apt install -y libboost-all-dev libhdf5-dev libminizip-dev
+        displayName: 'APT install'
+        
+      # AVRO
+      - script: |
+          curl https://mirroir.wptheme.fr/apache/avro/avro-1.10.1/cpp/avro-cpp-1.10.1.tar.gz -o $(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz
+      - task: ExtractFiles@1
+        inputs:
+          archiveFilePatterns: '$(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz'
+          cleanDestinationFolder: false
+      - powershell: |
+          sed -i 's/install (TARGETS avrocpp avrocpp_s/install (TARGETS avrocpp_s/' $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt
+          sed -i 's/install (TARGETS avrogencpp RUNTIME DESTINATION bin)//' $(Build.SourcesDirectory)/avro-cpp-1.10.1/CMakeLists.txt
+        displayName: 'Do not install avro non static' 
+      - task: CMake@1
+        displayName: 'CMake configure AVRO'
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs:
+            $(Build.SourcesDirectory)/avro-cpp-1.10.1
+            -Wno-dev -Wno-deprecated
+            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DCMAKE_INSTALL_PREFIX=$(Agent.TempDirectory)/avro-cpp-1.10.1-install
+      - task: CMake@1
+        displayName: "CMake build AVRO"
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs: --build . --target avrocpp_s
+      - task: CMake@1
+        displayName: "CMake Install AVRO"
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
+          cmakeArgs: --install .    
+       
+      # fesapi
+      - script: |
+          git clone https://github.com/F2I-Consulting/fesapi.git $(Agent.TempDirectory)/fesapi
+        displayName: 'Cloning fesapi'
+      - task: CMake@1
+        displayName: 'CMake configure fesapi'
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/fesapi-build
+          cmakeArgs:
+            ../fesapi
+            -Wno-dev -Wno-deprecated
+            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
+            -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/libavrocpp_s.a
+      - task: CMake@1
+        displayName: "CMake build fesapi"
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/fesapi-build
+          cmakeArgs: --build . 
+      - task: CMake@1
+        displayName: "CMake Install fesapi"
+        inputs:
+          workingDirectory: $(Agent.TempDirectory)/fesapi-build
+          cmakeArgs: --build . --target install
+
+      - task: CMake@1
+        displayName: 'Configure FETPAPI build'
+        inputs:
+          cmakeArgs:
+            -Wno-dev -Wno-deprecated
+            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
+            -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/libavrocpp_s.a
+            -DWITH_FESAPI=TRUE
+            -DFESAPI_INCLUDE_DIR=$(Agent.TempDirectory)/fesapi-build/install/include
+            -DFESAPI_LIBRARY_RELEASE=$(Agent.TempDirectory)/fesapi-build/install/bin/FesapiCpp.2.1.0.0.so
             -DCMAKE_BUILD_TYPE=Release
             -S $(Build.SourcesDirectory)
             -B $(Build.BinariesDirectory)
