--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -518,9 +518,15 @@ jobs:
           cmakeArgs:
             ../fesapi
             -Wno-dev -Wno-deprecated
+            -DHDF5_1_8=TRUE
+            -DHDF5_C_INCLUDE_DIR=/usr/include/hdf5/serial/
+            -DHDF5_C_LIBRARY_RELEASE=/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5.so
+            -DMINIZIP_INCLUDE_DIR=/usr/include/minizip
+            -DMINIZIP_LIBRARY_RELEASE=/usr/lib/x86_64-linux-gnu/libminizip.so
+            -DZLIB_INCLUDE_DIR=/usr/include
+            -DZLIB_LIBRARY_RELEASE=/usr/lib/x86_64-linux-gnu/libz.so
             -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
-            -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
-            -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/libavrocpp_s.a
+            -DCMAKE_BUILD_TYPE=Release
       - task: CMake@1
         displayName: "CMake build fesapi"
         inputs:
@@ -541,6 +547,7 @@ jobs:
             -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
             -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/libavrocpp_s.a
             -DWITH_FESAPI=TRUE
+            -DHDF5_C_INCLUDE_DIR=
             -DFESAPI_INCLUDE_DIR=$(Agent.TempDirectory)/fesapi-build/install/include
             -DFESAPI_LIBRARY_RELEASE=$(Agent.TempDirectory)/fesapi-build/install/bin/FesapiCpp.2.1.0.0.so
             -DCMAKE_BUILD_TYPE=Release
