--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -108,6 +108,11 @@ jobs:
           workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
           cmakeArgs: --install .
           
+      # Patch about https://github.com/boostorg/beast/issues/1980
+      - powershell: |
+          ((Get-Content -path $(BOOST_ROOT_1_72_0)/include/boost/beast/core/impl/file_stdio.ipp -Raw) -replace 'std::numeric_limits<long>::max','(std::numeric_limits<long>::max)') | Set-Content -Path $(BOOST_ROOT_1_72_0)/include/boost/beast/core/impl/file_stdio.ipp
+        displayName: 'Patching Beast 1.72 for MSVC'    
+          
       # HDF5
       - powershell: |
           Invoke-WebRequest https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.10/hdf5-1.10.6/bin/hdf5-1.10.6-Std-win10_64-vs15.zip -OutFile C:\hdf5-1.10.6-Std-win10_64-vs15.zip
@@ -143,7 +148,7 @@ jobs:
       
       # fesapi 
       - powershell: |
-          git clone https://github.com/F2I-Consulting/fesapi.git C:/fesapi
+          git clone --branch dev https://github.com/mpoudret/fesapi.git C:/fesapi
         displayName: 'Cloning fesapi'
       - task: CMake@1
         displayName: 'CMake configure fesapi'
@@ -353,7 +358,7 @@ jobs:
           
       # fesapi
       - powershell: |
-          git clone https://github.com/F2I-Consulting/fesapi.git C:/fesapi
+          git clone --branch dev https://github.com/mpoudret/fesapi.git C:/fesapi
         displayName: 'Cloning fesapi'
       - task: CMake@1
         displayName: 'CMake configure fesapi'
@@ -509,7 +514,7 @@ jobs:
        
       # fesapi
       - script: |
-          git clone https://github.com/F2I-Consulting/fesapi.git $(Agent.TempDirectory)/fesapi
+          git clone --branch dev https://github.com/mpoudret/fesapi.git $(Agent.TempDirectory)/fesapi
         displayName: 'Cloning fesapi'
       - task: CMake@1
         displayName: 'CMake configure fesapi'
@@ -549,7 +554,7 @@ jobs:
             -DWITH_FESAPI=TRUE
             -DHDF5_C_INCLUDE_DIR=/usr/include/hdf5/serial/
             -DFESAPI_INCLUDE_DIR=$(Agent.TempDirectory)/fesapi-build/install/include
-            -DFESAPI_LIBRARY_RELEASE=$(Agent.TempDirectory)/fesapi-build/install/bin/FesapiCpp.2.1.0.0.so
+            -DFESAPI_LIBRARY_RELEASE=$(Agent.TempDirectory)/fesapi-build/install/bin/libFesapiCpp.so
             -DCMAKE_BUILD_TYPE=Release
             -S $(Build.SourcesDirectory)
             -B $(Build.BinariesDirectory)
