--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,7 +201,7 @@ if (WITH_ETP_SSL)
 		${FETPAPI_SSL_SOURCES}
 		${FETPAPI_SSL_HEADERS}
 	)
-endif ()
+endif (WITH_ETP_SSL)
 
 if (WITH_FESAPI)
 	file (GLOB FETPAPI_FESAPI_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/etp/fesapi/*.cpp)
@@ -261,12 +261,46 @@ install(EXPORT Fetpapi-export
   DESTINATION
     ${CMAKE_INSTALL_LIBDIR}/cmake/Fetpapi
 )
-	
-install(
-	DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/
+
+INSTALL (
+	FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/nsDefinitions.h
 	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/fetpapi
-	FILES_MATCHING PATTERN "*.h"
+	COMPONENT fetpapi_headers
 )
+
+INSTALL (
+	FILES ${FETPAPI_HEADERS}
+	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/fetpapi/etp
+	COMPONENT fetpapi_headers
+)
+
+INSTALL (
+	FILES ${FETPAPI_PROTOCOL_HEADERS}
+	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/fetpapi/etp/ProtocolHandlers
+	COMPONENT fetpapi_headers
+)
+
+INSTALL (
+	FILES ${FETPAPI_TOOLS_HEADERS}
+	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/fetpapi/tools
+	COMPONENT fetpapi_headers
+)
+
+if (WITH_ETP_SSL)
+	INSTALL (
+		FILES ${FETPAPI_SSL_HEADERS}
+		DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/fetpapi/etp/ssl
+		COMPONENT fetpapi_headers
+	)
+endif (WITH_ETP_SSL)
+
+if (WITH_FESAPI)
+	INSTALL (
+		FILES ${FETPAPI_FESAPI_HEADERS}
+		DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/fetpapi/etp/fesapi
+		COMPONENT fetpapi_headers
+	)
+endif (WITH_FESAPI)
 
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cmake/FetpapiConfig.cmake
         DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/Fetpapi")
